--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 .terraform/providers/registry.terraform.io/hashicorp/aws/5.85.0/darwin_amd64/terraform-provider-aws_v5.85.0_x5 filter=lfs diff=lfs merge=lfs -text
+.terraform/** filter=lfs diff=lfs merge=lfs -text
